[gd_scene load_steps=6 format=3 uid="uid://cfuskyu58uo2v"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_k3n6g"]
[ext_resource type="Script" path="res://src/ui/components/settings/settings.gd" id="2_gps4e"]

[sub_resource type="Theme" id="Theme_5xlkc"]
Label/colors/font_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_jsp7l"]

[sub_resource type="Theme" id="Theme_eontw"]

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k3n6g")
script = ExtResource("2_gps4e")

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85098, 0.843137, 0.866667, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 240.0
grow_vertical = 2
color = Color(0.960784, 0.960784, 0.960784, 1)

[node name="Sections" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
offset_top = 63.0
offset_right = 239.0
offset_bottom = 284.0
theme = SubResource("Theme_5xlkc")
theme_type_variation = &"2"
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="ColorRect/Sections"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="GeneralButton" type="Button" parent="ColorRect/Sections"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"OrangeButton"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_jsp7l")
text = "General"
alignment = 0

[node name="GraphicButton" type="Button" parent="ColorRect/Sections"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"OrangeButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_jsp7l")
text = "Graphics"
alignment = 0

[node name="MonitoringButton" type="Button" parent="ColorRect/Sections"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"OrangeButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_jsp7l")
text = "Monitoring
"
alignment = 0

[node name="General" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 302.0
offset_top = 81.0
offset_right = 622.0
offset_bottom = 352.0
theme = SubResource("Theme_5xlkc")
theme_type_variation = &"2"
theme_override_constants/separation = 15
alignment = 1

[node name="Map" type="CheckBox" parent="General"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Show map"
flat = true

[node name="CachePath" type="VBoxContainer" parent="General"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label2" type="Label" parent="General/CachePath"]
layout_mode = 2
theme = SubResource("Theme_eontw")
text = "Cache Path"

[node name="TextEdit" type="TextEdit" parent="General/CachePath"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
editable = false
scroll_fit_content_height = true

[node name="Graphics" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 302.0
offset_top = 81.0
offset_right = 622.0
offset_bottom = 352.0
theme = SubResource("Theme_5xlkc")
theme_type_variation = &"2"
theme_override_constants/separation = 15
alignment = 1

[node name="WindowSize" type="VBoxContainer" parent="Graphics"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="Graphics/WindowSize"]
layout_mode = 2
theme = SubResource("Theme_eontw")
text = "Window Size"

[node name="WindowSizeMenuButton" type="OptionButton" parent="Graphics/WindowSize"]
layout_mode = 2

[node name="Resolution" type="VBoxContainer" parent="Graphics"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Graphics/Resolution"]
layout_mode = 2
theme = SubResource("Theme_eontw")
text = "Resolution"

[node name="ResolutionMenuButton" type="OptionButton" parent="Graphics/Resolution"]
layout_mode = 2

[node name="GuiScale" type="VBoxContainer" parent="Graphics"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Graphics/GuiScale"]
layout_mode = 2
theme = SubResource("Theme_eontw")
text = "UI Scale"

[node name="HSlider" type="HSlider" parent="Graphics/GuiScale"]
layout_mode = 2
min_value = 50.0
max_value = 200.0
step = 10.0
value = 100.0

[node name="Monitoring" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 302.0
offset_top = 81.0
offset_right = 602.0
offset_bottom = 352.0
theme = SubResource("Theme_5xlkc")
theme_type_variation = &"2"
theme_override_constants/separation = 25
alignment = 1

[node name="SpawnedScenes" type="CheckBox" parent="Monitoring"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spawned Scenes"
flat = true

[node name="ScenesSelector2" type="CheckBox" parent="Monitoring"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Scenes Selector"
flat = true

[node name="RamUsage" type="CheckBox" parent="Monitoring"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "RAM Usage"
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 59.0
grow_horizontal = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_top = 18.0
offset_right = -27.0
offset_bottom = 41.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="toggled" from="ColorRect/Sections/GeneralButton" to="." method="_on_general_button_toggled"]
[connection signal="toggled" from="ColorRect/Sections/GraphicButton" to="." method="_on_graphic_button_toggled"]
[connection signal="toggled" from="ColorRect/Sections/MonitoringButton" to="." method="_on_monitoring_button_toggled"]
[connection signal="toggled" from="General/Map" to="." method="_on_map_toggled"]
[connection signal="item_selected" from="Graphics/WindowSize/WindowSizeMenuButton" to="." method="_on_window_size_menu_button_item_selected"]
[connection signal="item_selected" from="Graphics/Resolution/ResolutionMenuButton" to="." method="_on_resolution_menu_button_item_selected"]
[connection signal="drag_ended" from="Graphics/GuiScale/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="toggled" from="Monitoring/SpawnedScenes" to="." method="_on_spawned_scenes_toggled"]
[connection signal="toggled" from="Monitoring/ScenesSelector2" to="." method="_on_scenes_selector_2_toggled"]
[connection signal="toggled" from="Monitoring/RamUsage" to="." method="_on_ram_usage_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
